--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -2,7 +2,7 @@
   "Interval": "* * * * *",
 
   "MongoConnectionString": "",
-  "MongoDatabase": "",
+  "MongoDatabase": "crawler",
 
   "LocalDbConnectionString": "Data Source=local.db"
 }
