--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -1,8 +1,13 @@
 {
   "Interval": "* * * * *",
 
-  "MongoConnectionString": "",
+  // Database which will be used to save speeches
+  "MongoConnectionString": "mongodb://localhost:27017",
   "MongoDatabase": "crawler",
 
-  "LocalDbConnectionString": "Data Source=local.db"
+  // Database that is used to determine which documents of the Bundestag have already been indexed
+  "LocalDbConnectionString": "Data Source=local.db",
+
+  // Indexing api endpoint (without a trailing slash!)
+  "IndexingApiEndpoint": "http://localhost:8421/api"
 }
