change localhost to 127.0.0.1

--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -2,7 +2,7 @@
   "Interval": "* * * * *",
 
   // Database which will be used to save speeches
-  "MongoConnectionString": "mongodb://localhost:27017",
+  "MongoConnectionString": "mongodb://127.0.0.1:27017",
   "MongoDatabase": "crawler",
 
   // Database that is used to determine which documents of the Bundestag have already been indexed
