Added ability to configure the mongodb collection name

--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -4,6 +4,7 @@
   // Database which will be used to save speeches
   "MongoConnectionString": "mongodb://localhost:27017",
   "MongoDatabase": "crawler",
+  "MongoCollection": "protocols",
 
   // Database that is used to determine which documents of the Bundestag have already been indexed
   "LocalDbConnectionString": "Data Source=local.db",
