--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -2,7 +2,7 @@
   "Interval": "* * * * *",
 
   // Database which will be used to save speeches
-  "MongoConnectionString": "mongodb://localhost:8430",
+  "MongoConnectionString": "mongodb://0.0.0.0:8430",
   "MongoDatabase": "crawler",
   "MongoCollection": "protocols",
 
