change localhost to 0.0.0.0

--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -2,7 +2,7 @@
   "Interval": "* * * * *",
 
   // Database which will be used to save speeches
-  "MongoConnectionString": "mongodb://127.0.0.1:8430",
+  "MongoConnectionString": "mongodb://0.0.0.0:8430",
   "MongoDatabase": "crawler",
   "MongoCollection": "protocols",
 
@@ -10,5 +10,5 @@
   "LocalDbConnectionString": "Data Source=local.db",
 
   // Indexing api endpoint (without a trailing slash!)
-  "IndexingApiEndpoint": "http://localhost:8421/api"
+  "IndexingApiEndpoint": "http://0.0.0.0:8421/api"
 }
