Added "InitialDelay" option as requested

--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -1,5 +1,9 @@
 {
+  // Interval (CRON Expression) in which the Bundestag website will be crawled
   "Interval": "* * * * *",
+
+  // One time delay in seconds before the Crawler will evaluate the interval CRON expression and run according to the given "Interval" schedule
+  "InitialDelay": 0,
 
   // Database which will be used to save speeches
   "MongoConnectionString": "mongodb://localhost:27017",
