Integrated PP18 extraction, restructured ApplicationHost a bit to better work with failed attempts

--- a/Crawler/Crawler.csproj
+++ b/Crawler/Crawler.csproj
@@ -36,6 +36,9 @@
     <None Update="text-extraction19.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="textextraction-18.jar">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="title_shortener.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
