Added chunking for saving, made it more error resillient, updated python scripts

--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -5,6 +5,9 @@
   // One time delay in seconds before the Crawler will evaluate the interval CRON expression and run according to the given "Interval" schedule
   "InitialDelay": 0,
 
+  // Maximum batch size in which documents will be POSTed to the indexing api endpoint
+  "MaximumBatchSize": 5,
+
   // Database which will be used to save speeches
   "MongoConnectionString": "mongodb://0.0.0.0:8430",
   "MongoDatabase": "crawler",
