Ability to set a HTTP timeout

--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -17,5 +17,8 @@
   "LocalDbConnectionString": "Data Source=local.db",
 
   // Indexing api endpoint (without a trailing slash!)
-  "IndexingApiEndpoint": "http://0.0.0.0:8421/api"
+  "IndexingApiEndpoint": "http://0.0.0.0:8421/api",
+
+  // Timeout of the HTTP request to the api endpoints
+  "IndexingApiTimeout": 300
 }
