Added the ability to define a delay between indexing of chunks of protocols

--- a/Crawler/appsettings.json
+++ b/Crawler/appsettings.json
@@ -5,6 +5,9 @@
   // One time delay in seconds before the Crawler will evaluate the interval CRON expression and run according to the given "Interval" schedule
   "InitialDelay": 0,
 
+  // Delay in seconds in between HTTP calls to the indexing api to save a chunk of protocols
+  "ChunkDelay": 0,
+
   // Maximum batch size in which documents will be POSTed to the indexing api endpoint
   "MaximumBatchSize": 5,
 
@@ -19,6 +22,6 @@
   // Indexing api endpoint (without a trailing slash!)
   "IndexingApiEndpoint": "http://0.0.0.0:8421/api",
 
-  // Timeout of the HTTP request to the api endpoints
+  // Timeout of the HTTP request to the api endpoints in seconds
   "IndexingApiTimeout": 300
 }
